# Custom-CryptoCurrency

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: block.hpp  blockchain.hpp  blockchain_iterator.hpp  cli.hpp  cryptodb.hpp  pow.hpp  transaction.hpp  utils.hpp  wallet.hpp  wallets.hpp
proto/: block.proto  wallets.proto
src/: block.cpp  blockchain.cpp  blockchain_iterator.cpp  cli.cpp  cryptodb.cpp  main.cpp  pow.cpp  transaction.cpp  utils.cpp  wallet.cpp  wallets.cpp
test/: main.cpp  test.sh
